# SchoolRing

./: .gitignore  .pre-commit-config.yaml  README.md  convert_ui.py  main.py  pyproject.toml
.github/workflows/: build.yaml
docs/: technical_specification.md
schoolring/: __main__.py  services.py
schoolring/ui/: active_schedule_ui.py  add_template_frame_ui.py  authorization_ui.py  choose_defoult_templateui_ui.py  create_schedule_ui.py  delete_schedul_on_day_ui.py  error_ui.py  frame_for_home_ui.py  get_name_templ_ui.py  lock_ui.py  logining_ui.py  main_ui.py  one_template_ui.py  registration_ui.py  set_schedul_on_day_ui.py  sucsesfully_ui.py
src/schoolring/: base_of_data.py  datacheking.py  views.py
