[tool.poetry]
name = "schoolring"
version = "0.1.0"
description = ""
authors = ["alchemmist <anton.ingrish@gmail.com>"]
readme = "README.md"

packages = [
  { include = "schoolring", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
pyqt6 = "^6.5.0"
schedule = "^1.2.0"
audioplayer = "^0.6"
pygobject = "^3.52.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
