[project]
name = "school-ring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "audioplayer>=0.6",
    "gobject>=0.1.0",
    "pygobject>=3.52.3",
    "pyqt6>=6.9.1",
    "pyqt6-qt6>=6.9.1",
    "pyqt6-sip>=13.10.2",
    "schedule>=1.2.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.14.0",
]
